# sparticles-bevy

./: Cargo.toml  LICENSE  README.md
src/: dev_ui.rs  grid.rs  instant_extensions.rs  main.rs  particle.rs  pattern.rs  point.rs  position.rs
src/animations/: animation.rs  animation_handler.rs  color_animation.rs  mod.rs  size_animation.rs  stray_animation.rs  weird_animation.rs
src/dev/: dev_camera.rs  dev_ui.rs  mod.rs
src/emitters/: diffusion_animation.rs  emit_color_animation.rs  emit_speed_animation.rs  emitter.rs  emitter_animation.rs  emitter_animation_handler.rs  loose_movement_animation.rs  randomize_size_animation.rs  sway_animation.rs
src/forces/: accelerating_force.rs  constant_force.rs  force.rs  force_handler.rs  gravitational_force.rs  lerp_force.rs  mod.rs
src/math/: velocity.rs
src/shaders/: shader.rs
src/trails/: trail_animation.rs
