[package]
name = "sparticles-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic", "wayland"] }
bytemuck = "1.8"
tracing = "0.1"
rand = "0.8"

[features]
#trace = []
#trace_chrome = []
